fixed footer on small displays

--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -77,6 +77,11 @@ a:hover {
   padding-bottom: 3rem;
 }
 
+.sponsor-logo {
+    max-width: 70%;
+    height: auto;
+}
+
 @media (max-width: 992px) {
   .paragraph {
     font-size: 1.5rem;
